Updated due date for EGR 304 PS#7

--- a/S20/304/304S20PS.HTM
+++ b/S20/304/304S20PS.HTM
@@ -53,7 +53,7 @@ DO {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 2/28/2020 11:01 pm)
+                              >(Last update: 3/17/2020 5:44 pm)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -89,7 +89,7 @@ DO {
         2/28
 
    <!-- Due -->             </TD><TD align="center" valign="top">
-        3/20
+        3/27
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
         &nbsp;
@@ -143,7 +143,12 @@ DO {
 		Optional: Example of RS-232 debug ports in     <br>&nbsp;
 		various products leaving <a href=
 		"https://www.youtube.com/watch?time_continue=24&v=h5PRvBpLuJs&feature=emb_logo" 
-		>security vulnerabilities</a>. 
+		>security vulnerabilities</a>.                 <br>&nbsp;
+		                                               <br>&nbsp;<small>
+		On Tuesday, 3/17, the due date on this assignment was <br>&nbsp;
+		changed from 3/20 to 3/27 to accomodate the recent    <br>&nbsp;
+		efforts related to slow the spread of corona virus.   </small>
+		
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
 
    <!-- PS#  -->                  <TD align="right" valign="top">
