Fixed a typo in EGR 304 PS#7

--- a/S20/304/304S20PS.HTM
+++ b/S20/304/304S20PS.HTM
@@ -146,7 +146,7 @@ DO {
 		>security vulnerabilities</a>.                 <br>&nbsp;
 		                                               <br>&nbsp;<small>
 		On Tuesday, 3/17, the due date on this assignment was <br>&nbsp;
-		changed from 3/20 to 3/27 to accomodate the recent    <br>&nbsp;
+		changed from 3/20 to 3/27 to accommodate the recent   <br>&nbsp;
 		efforts related to slow the spread of corona virus.   </small>
 		
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
