Updated slide index for EGR 304

--- a/S20/304/304S20DN.HTM
+++ b/S20/304/304S20DN.HTM
@@ -228,8 +228,8 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       3/20<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment--><font color="grey">No class--Spring Break</font><!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Wednesday -->&nbsp;<!--start comment--><font color="grey">Extended Spring Break due to Corona Virus--see various e-mail messages</font><!--end comment--><br>
+      <!--Friday    -->&nbsp;<!--start comment-->Comming: Practice virtual live classroom, IEEE Areospace conference report<!--end comment--></td>  
    </TR><!-- Week of 3/23------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
