Posted today's slides and video for EGR 304.  Also posted Wednesday's video.

--- a/S20/304/304S20DN.HTM
+++ b/S20/304/304S20DN.HTM
@@ -223,13 +223,13 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
 	  3/16<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      3/18<!-- --</a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      3/20<!-- --</a><!-- --></td>
+      3/18<!-- --</a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/166350439/download?download_frd=1"><!-- -->
+      3/20<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment--><font color="grey">No class--Spring Break</font><!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><font color="grey">Extended Spring Break due to Corona Virus--see various e-mail messages</font><!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment-->Comming: Practice virtual live classroom, IEEE Areospace conference report<!--end comment--></td>  
+      <!--Wednesday -->&nbsp;<!--start comment--><font color="grey">Extended Spring Break due to Corona Virus</font>, <a href="https://www.youtube.com/watch?v=bp2f4lp-tLg">Video</a>: virtual classroom<!--end comment--><br>
+      <!--Friday    -->&nbsp;<!--start comment--><a href="https://www.youtube.com/watch?v=xkFaL-iUr14">Video</a> Practice virtual live classroom, IEEE Areospace conference report<!--end comment--></td>  
    </TR><!-- Week of 3/23------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
