--- a/S20/304/304S20PS.HTM
+++ b/S20/304/304S20PS.HTM
@@ -53,7 +53,7 @@ DO {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 3/17/2020 5:44 pm)
+                              >(Last update: 3/21/2020 2:04 pm)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -161,7 +161,9 @@ DO {
         2/28
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        &nbsp;
+        <a href=
+		https://dordt.instructure.com/files/166372662/download?download_frd=1"
+		>3/02</a>
 		
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Position sensing, interrupts           <br>&nbsp;
