Added turn in link to EGR 304 PS#7

--- a/S20/304/304S20PS.HTM
+++ b/S20/304/304S20PS.HTM
@@ -53,7 +53,7 @@ DO {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 3/21/2020 2:04 pm)
+                              >(Last update: 3/25/2020 3:45 pm)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -144,6 +144,9 @@ DO {
 		various products leaving <a href=
 		"https://www.youtube.com/watch?time_continue=24&v=h5PRvBpLuJs&feature=emb_logo" 
 		>security vulnerabilities</a>.                 <br>&nbsp;
+		                                               <br>&nbsp;
+		Turn in your homework <a href="https://dordt.instructure.com/courses/2662877/assignments/26194059"
+		                      >HERE</a>                <br>&nbsp;
 		                                               <br>&nbsp;<small>
 		On Tuesday, 3/17, the due date on this assignment was <br>&nbsp;
 		changed from 3/20 to 3/27 to accommodate the recent   <br>&nbsp;
