--- a/S20/304/304S20PS.HTM
+++ b/S20/304/304S20PS.HTM
@@ -53,7 +53,7 @@ DO {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 3/25/2020 3:45 pm)
+                              >(Last update: 3/27/2020 10:48 am)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -80,6 +80,44 @@ DO {
    <!-- Assignment -->
                </TD><TD align="center" valign="bottom"><small><b>
     Assignment                                       </b></small>
+<!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
+
+   <!-- PS#  -->                  <TD align="right" valign="top">
+ 8
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        3/27
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        4/03
+        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+        &nbsp;
+		
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics: Synchronous serial interfacing, Ethernet<br>&nbsp;
+       Read this <a href=
+        "../../BURKS/pcinfo/hardware/ethernet/contents.htm"
+                 >Ethernet Tutorial</a>.               <BR>&nbsp;
+                                                       <BR>&nbsp;
+        Take this twenty-question <a href=
+        "../../BURKS/pcinfo/hardware/ethernet/qframe.htm"
+                                 >quiz</a> on Ethernet.<BR>&nbsp;
+        E-mail your quiz grade to Prof. De Boer.       <BR>&nbsp;
+        You are encouraged to repeat the quiz until    <BR>&nbsp;
+        you get a perfect grade.  Turn in only your    <BR>&nbsp;
+        best grade.                                    <BR>&nbsp;
+                                                       <br>&nbsp;
+		Optional: Example <a href=
+		"https://docs.python.org/release/2.5.2/lib/socket-example.html"
+		>Python sockets</a> using TCP/IP  <br>&nbsp;
+        Optional: <a href=
+        "BOOKS_LAN.HTM"
+        >Books in Dordt's Library</a>                  <br>&nbsp;
+        Optional: Wikipedia article <a href=
+        "http://en.wikipedia.org/wiki/Ethernet"
+        >Ethernet</a>
+		
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
 
    <!-- PS#  -->                  <TD align="right" valign="top">
