--- a/S20/304/304S20DN.HTM
+++ b/S20/304/304S20DN.HTM
@@ -236,13 +236,13 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/166494625/download?download_frd=1"><!-- -->
 	  3/23<!-- --></a><!-- --><br><!-- --><a href=
       "https://dordt.instructure.com/files/166662671/download?download_frd=1"><!-- -->
-      3/25<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      3/27<!-- --</a><!-- --></td>
+      3/25<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/166843363/download?download_frd=1"><!-- -->
+      3/27<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment--><a href="https://www.youtube.com/watch?v=fRY2MNje9ac">Video</a> Devotion: "Weak"; Async vs sync serial, RS-232 history &amp; voltages <!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><a href="https://www.youtube.com/watch?v=WQ6DskBNH1o">Video</a> RS-232 reception, libraries, configuration, power over RS-232<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment--><a href="https://www.youtube.com/watch?v=IRbHtStqKqQ">Video</a> Baud, synchronous serial interfacing, Ethernet<!--end comment--></td>  
    </TR><!-- Week of 3/30------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
