Publishing today's slides and video for EGR 304

--- a/S20/304/304S20DN.HTM
+++ b/S20/304/304S20DN.HTM
@@ -247,14 +247,14 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/167040525/download?download_frd=1"><!-- -->
-	  3/30<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      4/01<!-- --</a><!-- --><br><!-- --<a href=
+	  3/30<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/167420703/download?download_frd=1"><!-- -->
+      4/01<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       4/03<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment--><a href="https://www.youtube.com/watch?v=C2p9OatbQS0">Video</a> 'Scope view of Manchester, PoE+, Wi-Fi, Frames and OSI model<!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment--><a href="https://www.youtube.com/watch?v=0kvhoUWkylo">Video</a>Definition of Ethernet hub, switch, bridge, router, WAP<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 4/06------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
