Published EGR 304 PS#7 solution

--- a/S20/304/304S20PS.HTM
+++ b/S20/304/304S20PS.HTM
@@ -53,7 +53,7 @@ DO {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 3/27/2020 10:48 am)
+                              >(Last update: 4/07/2020 5:50 pm)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -130,7 +130,9 @@ DO {
         3/27
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        &nbsp;
+        <a href=
+		https://dordt.instructure.com/files/167890454/download?download_frd=1"
+		>4/01</a>
 		
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Task scheduling, Measuring freq, period<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; 
