Published PS#9 for EGR 304

--- a/S20/304/304S20PS.HTM
+++ b/S20/304/304S20PS.HTM
@@ -53,7 +53,7 @@ DO {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 4/07/2020 5:50 pm)
+                              >(Last update: 4/14/2020 7:50 pm)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -83,6 +83,45 @@ DO {
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
 
    <!-- PS#  -->                  <TD align="right" valign="top">
+ 9
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        4/15
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        4/24
+        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+        &nbsp;
+		
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics: Synchronous serial interfacing, USB    <br>&nbsp;
+		                                               <br>&nbsp;
+        Browse: the <a href="https://www.usb.org/sites/default/files/usb_20_20190524.zip"
+		           >Universal Serial Bus Specification</a> <br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; 
+		        version 2.0 (Click the link above and  <br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;
+				download the zip file.  Then within the<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;
+				zip file find file usb20.pdf.  Browse  <br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;
+				that file.)                            <br>&nbsp;
+				                                       <br>&nbsp;
+		Read: Selected pages of the above file as      <br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;
+		        suggested in the essay questions.      <br>&nbsp;
+				                                       <br>&nbsp;
+		Download <a href="PS_USB.RTF"
+		        >these essay questions</a>.            <br>&nbsp;
+		<DO>Use a word-processor to answer the essay   <br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;
+		        questions.</Do>                        <br>&nbsp;
+		Then <a href="https://dordt.instructure.com/courses/2662877/assignments/26410295"
+		     >upload your file</a> (click link) to Canvas.<br>&nbsp;
+			                                           <br>&nbsp;
+		Optional:  Browse the entire web site of <a href="https://www.usb.org/">usb.org</a>       <br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;
+		           The specs. are in the "document library"<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;
+				   which can be accessed from a small link <br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;
+				   in the fine-print near the bottom of the <br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;
+				   home page.  
+<!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
+
+   <!-- PS#  -->                  <TD align="right" valign="top">
  8
 
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
@@ -92,7 +131,7 @@ DO {
         4/03
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        &nbsp;
+        Graded<br>auto-<br>matic-<br>ally<br><br>Nothing<br>to<br>return
 		
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Synchronous serial interfacing, Ethernet<br>&nbsp;
@@ -100,9 +139,9 @@ DO {
         "../../BURKS/pcinfo/hardware/ethernet/contents.htm"
                  >Ethernet Tutorial</a>.               <BR>&nbsp;
                                                        <BR>&nbsp;
-        Take this twenty-question <a href=
+        <DO>Take this twenty-question</DO> <a href=
         "../../BURKS/pcinfo/hardware/ethernet/qframe.htm"
-                                 >quiz</a> on Ethernet.<BR>&nbsp;
+                                 >quiz</a> <DO>on Ethernet.</DO><BR>&nbsp;
         E-mail your quiz grade to Prof. De Boer.       <BR>&nbsp;
         You are encouraged to repeat the quiz until    <BR>&nbsp;
         you get a perfect grade.  Turn in only your    <BR>&nbsp;
@@ -142,7 +181,7 @@ DO {
         Read <a href="http://en.wikipedia.org/wiki/RS-232"
             >RS-232</a> in Wikipedia                   <BR>&nbsp;
                                                        <br>&nbsp;
-        Do this problem:                               <br>&nbsp;
+        <DO>Do this problem:</DO>                               <br>&nbsp;
         Plot voltage vs. time of the Tx line in RS-232 <br>&nbsp;
         for sending this text: "Z#" (without the       <br>&nbsp;
         quotation marks, with a capital "Z").  Assume  <br>&nbsp;
