Published EGR 304 slides and video for the day

--- a/S20/304/304S20DN.HTM
+++ b/S20/304/304S20DN.HTM
@@ -284,15 +284,15 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Friday    -->&nbsp;<!--start comment--><a href="https://www.youtube.com/watch?v=JQmG182r-xI">Video</a> USB: 4 pioneering features, plugs and jacks, speed in context: kcats<!--end comment--></td>  
    </TR><!-- Week of 4/20------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
-	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
-	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-	  4/20<!-- --</a><!-- --><br><!-- --<a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
+	  "https://dordt.instructure.com/files/169166476/download?download_frd=1"><!-- -->
+	  4/20<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       4/22<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       4/24<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Monday    -->&nbsp;<!--start comment--><a href="https://www.youtube.com/watch?v=NWKXjHKD2hM">Video</a> USB Physical A-B connectors, host-client, hubs, wire; USB signaling <!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><font color="grey">Lab Project II Report Due 11:59 PM</font><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 4/27------------------------------------------------------------------ --><TR>
