--- a/S20/304/304S20DN.HTM
+++ b/S20/304/304S20DN.HTM
@@ -283,18 +283,18 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Wednesday -->&nbsp;<!--start comment--><a href="https://www.youtube.com/watch?v=xu30Ze6pZI0">Video</a> Ethernet an Internet protocol&mdash;higher OSI layers, client-server roles<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><a href="https://www.youtube.com/watch?v=JQmG182r-xI">Video</a> USB: 4 pioneering features, plugs and jacks, speed in context: kcats<!--end comment--></td>  
    </TR><!-- Week of 4/20------------------------------------------------------------------ --><TR>
-      <TD width= "15" align="center" valign="bottom">M<br>W<br>F<br>&nbsp;</td>
+      <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/169166476/download?download_frd=1"><!-- -->
 	  4/20<!-- --></a><!-- --><br><!-- --><a href=
       "https://dordt.instructure.com/files/169442165/download?download_frd=1"><!-- -->
       4/22<!-- --></a><!-- --><br><!-- --><a href=
       "https://dordt.instructure.com/files/169654191/download?download_frd=1"><!-- -->
-      4/24<br>&nbsp;<!-- --</a><!-- --></td>
+      4/24<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment--><a href="https://www.youtube.com/watch?v=NWKXjHKD2hM">Video</a> USB Physical A-B connectors, host-client, hubs, wire; USB signaling <!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><a href="https://www.youtube.com/watch?v=wfhGsAQ4ZlY">Video</a> USB transaction types, USB hot-plugging; T-lines: Telegrapher's eqs.<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--<a href="https://www.youtube.com/watch?v=xxxxxxxxxxx">Video</a>-->(Video still in process) T-lines: Wave eq, velocity of prop., char impedance, reflection coeff.<!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment--><a href="https://www.youtube.com/watch?v=oDuKevT3dP8">Video</a> T-lines: Wave eq, velocity of prop., char impedance, reflection coeff.<!--end comment--></td>  
    </TR><!-- Week of 4/27------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
