Added errata, Sedra and Smith 7th, page 374B

--- a/errata/Sedra_Smith/7th/S_S_7_ER.HTM
+++ b/errata/Sedra_Smith/7th/S_S_7_ER.HTM
@@ -14,7 +14,7 @@
 <P align="center"><A HREF="../../../index.html">
                    Professor De Boer</A>'s list of<br><a href="../../../ERRATA/err.htm"> 
                        TEXTBOOK ERRATA</a><br>
-                    (last update 4/23/2019)<br> 
+                    (last update 4/25/2020)<br> 
                                <br>
     <img src="Sedra_Smith_7_Cover_120x150.jpg" width="120" height="150"
                    alt="Photo of textbook"><br>
@@ -277,6 +277,23 @@ Page 374,  Equation 7.13</b><br>
    height="64" width="275" alt="corrected equation 5.35">    </p>
                            <small><i> &nbsp; &nbsp; &nbsp &nbsp;
    (Posted 8/17/2016)                       </i></small><br><br>   
+                                              
+                                          <A NAME="P374B"></A><b>
+Page 374,  Figure 7.4(b)--Incorrectly shaped slope between Q and B. </b><br>
+   The artist's inclusion of an inflection in the slope of the 
+   curve between Q and B is wrong. Point A is the vertex of a 
+   downward-opening parabola. The curve between points A and B 
+   is entirely parabolic, as described by Equation 7.5 on page 
+   370.  The slope continues to become monotonically more negative 
+   going along the arc from A, through Q, to B.  The curve from 
+   point C to point B meets that arc tangentially at point B so 
+   that there is no discontinuity in the slope of the curve.  
+   Figure 7.3(b) shows these details correctly.  (This same 
+   error appears in the 8th edition on page 371.)<br>          
+                           <small><i> &nbsp; &nbsp; &nbsp; &nbsp;
+   (Posted 4/25/2020 <br>&nbsp; &nbsp; &nbsp; &nbsp; 
+   &mdash; Thanks to Dylan Gulledge of The University of Northern 
+   Texas for pointing this out.)                       </i></small><br><br>   
                                               
                                           <A NAME="P480"></A><b>
 Page 480, Problem 7.5 part (c)</b><BR>
