Published slides and video for today's EGR 304 class

--- a/S20/304/304S20DN.HTM
+++ b/S20/304/304S20DN.HTM
@@ -297,15 +297,15 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Friday    -->&nbsp;<!--start comment--><a href="https://www.youtube.com/watch?v=oDuKevT3dP8">Video</a> T-lines: Wave eq, velocity of prop., char impedance, reflection coeff.<!--end comment--></td>  
    </TR><!-- Week of 4/27------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
-	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
-	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-	  4/27<!-- --</a><!-- --><br><!-- --<a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
+	  "https://dordt.instructure.com/files/169868686/download?download_frd=1"><!-- -->
+	  4/27<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       4/29<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       5/01<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Monday    -->&nbsp;<!--start comment--><a href="https://www.youtube.com/watch?v=WZ655Agbg-M">Video</a> T-lines: Examples <!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><font color="grey">Take-home final exam will become available after class at 1 PM CDT</font><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 5/04------------------------------------------------------------------ --><TR>
