Published slides for EGR 304

--- a/S20/304/304S20DN.HTM
+++ b/S20/304/304S20DN.HTM
@@ -299,14 +299,14 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/169868686/download?download_frd=1"><!-- -->
-	  4/27<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      4/29<!-- --</a><!-- --><br><!-- --<a href=
+	  4/27<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/170090486/download?download_frd=1"><!-- -->
+      4/29<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       5/01<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment--><a href="https://www.youtube.com/watch?v=WZ655Agbg-M">Video</a> T-lines: Examples <!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><font color="grey">Take-home final exam will become available after class at 1 PM CDT</font><!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment--><!--<a href="https://www.youtube.com/watch?v=zz">Video</a>-->Video in process; Security and privacy; Symetric key cryptosystems; Final available<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 5/04------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
