Fixed a spelling error in 304S20DN.HTM

--- a/S20/304/304S20DN.HTM
+++ b/S20/304/304S20DN.HTM
@@ -306,7 +306,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       5/01<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment--><a href="https://www.youtube.com/watch?v=WZ655Agbg-M">Video</a> T-lines: Examples <!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><a href="https://www.youtube.com/watch?v=YIpk7UUfKT8">Video</a> Security and privacy; Symetric key cryptosystems; Final available<!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment--><a href="https://www.youtube.com/watch?v=YIpk7UUfKT8">Video</a> Security and privacy; Symmetric key cryptosystems; Final available<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 5/04------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
