EGR 304 published today's slides and video

--- a/S20/304/304S20DN.HTM
+++ b/S20/304/304S20DN.HTM
@@ -2,7 +2,7 @@
 <head>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
 <link rel="shortcut icon" href="../../favicon.ico">
-<title>EGR 323, Daily Notes</title>
+<title>EGR 304, Daily Notes</title>
 <style type="text/css"><!--
 TABLE {
    font-family: "verdana";
@@ -301,13 +301,13 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/169868686/download?download_frd=1"><!-- -->
 	  4/27<!-- --></a><!-- --><br><!-- --><a href=
       "https://dordt.instructure.com/files/170090486/download?download_frd=1"><!-- -->
-      4/29<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      5/01<!-- --</a><!-- --></td>
+      4/29<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/170307281/download?download_frd=1"><!-- -->
+      5/01<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment--><a href="https://www.youtube.com/watch?v=WZ655Agbg-M">Video</a> T-lines: Examples <!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><a href="https://www.youtube.com/watch?v=YIpk7UUfKT8">Video</a> Security and privacy; Symmetric key cryptosystems; Final available<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment--><a href="https://www.youtube.com/watch?v=SEoWYGKoTOM">Video</a> Public key , RSA, secure hash, side-ch attack, message brokering<!--end comment--></td>  
    </TR><!-- Week of 5/04------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
