Published EGR 304 slides, video, PS#10

--- a/S20/304/304S20DN.HTM
+++ b/S20/304/304S20DN.HTM
@@ -280,7 +280,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       4/17<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment--><font color="grey">No class--Easter Break</font><!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><a href="https://www.youtube.com/watch?v=xu30Ze6pZI0">Video</a> Ethernet an Internet protocol&mdash;higher OSI layers, client-server roles<!--end comment--><br>
+      <!--Wednesday -->&nbgsp;<!--start comment--><a href="https://www.youtube.com/watch?v=xu30Ze6pZI0">Video</a> Ethernet an Internet protocol&mdash;higher OSI layers, client-server roles<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><a href="https://www.youtube.com/watch?v=JQmG182r-xI">Video</a> USB: 4 pioneering features, plugs and jacks, speed in context: kcats<!--end comment--></td>  
    </TR><!-- Week of 4/20------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
@@ -310,15 +310,15 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Friday    -->&nbsp;<!--start comment--><a href="https://www.youtube.com/watch?v=SEoWYGKoTOM">Video</a> Public key , RSA, secure hash, side-ch attack, message brokering<!--end comment--></td>  
    </TR><!-- Week of 5/04------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
-	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
-	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-	  5/04<!-- --</a><!-- --><br><!-- --<a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
+	  "https://dordt.instructure.com/files/170473767/download?download_frd=1"><!-- -->
+	  5/04<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       5/06<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       5/08<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment--><font color="grey">(Extended semester--New last day of class)</font><!--end comment--><br>
+      <!--Monday    -->&nbsp;<!--start comment--><a href="https://www.youtube.com/watch?v=CTBtoviFxLQ">Video</a> Best &amp; worst slides fr. this course, James 4:13-17 <font color="grey">(Last Day of Class)</font><!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><!--end comment-->EGR 304 take-home exam due 5/06 at 11:59 PM.  <font color="grey">(End of EGR 304 Course)</font><br>
       <!--Friday    -->&nbsp;<!--start comment--><font color="grey">(No EGR-304-related events. &nbsp; &nbsp; Graduation day for seniors)<!--end comment--></td>  
    </TR><!--------------------------------------------------------------------- End of table --- -->
