Published textbook requisistions.  Also updated integrity standards.  Some incomplete files came along for the ride.

--- a/integrity.htm
+++ b/integrity.htm
@@ -18,7 +18,7 @@ TABLE {font-family:"verdana"; font-size:10pt;} -->
 <P Align="center"><B>
                    STANDARDS of SCHOLARSHIP</b><br>
             For Professor De Boer's Classes</b><br>
- <small><font color="grey">(Last updated on 5/21/2019)</font></small></p>
+ <small><font color="grey">(Last updated on 6/02/2020)</font></small></p>
 
 <P><B>Homework is for Learning by Showing How<br>
 </B><a name="Show_How"></a>
@@ -83,7 +83,7 @@ write in order to think.  This includes any computerized homework
 that Prof. De Boer might assign.  You are not expected to be good
 at solving computerized homework without using a written aid such
 as a pad of paper and a pencil and eraser or a program such as 
-Mathcad running along side of the computerized homework.<br><br>  
+Mathcad running alongside of the computerized homework.<br><br>  
 
 Mistakes will happen because you need to start writing before 
 thinking all the way through the problem.  By using a pencil 
@@ -182,26 +182,35 @@ Src="cd_common/HWSTD/graph.gif"><BR>
 
 <B>Proofs (Also "Show," "Explain," "Derive," Etc.)</B>
 <a name="Proofs"></a><BR>
+Q:  "What is the best smartphone?"  <br>
+A:  "The Schwarzineger i99 Smartphone is simply the best!"<br>
+But do you believe it?  <br><br>
+
 You cannot convince most people by simply telling them the 
 "correct answer."  People want to know more.  Sometimes we need 
-proof.  Note:  Words like "show," "explain," "derive," etc. 
+proof.  <br><br>
+
+Words like "show," "explain," "derive," etc. 
 usually mean the same thing as "prove."<br><br> 
 
 An engineering proof is a chain of statements leading from given 
 information to a conclusion.  This chain of statements must be 
 accompanied by the names of the relevant definitions, theorems, 
-principles, and so forth.  (In a normal problem solution you only 
-show the chain of statements, omitting the names and assuming the 
-reader will recognize the definitions, theorems, etc. that have 
-been used.)   <BR><BR> 
+principles, and so forth.  In a normal problem solution you only 
+show the chain of statements and assume the reader will 
+recognize the definitions, theorems, etc. without naming them.
+In a proof, you name your authorities.   <BR><BR> 
 
 Engineering is about technical problems in a social context.  
 Engineering is not simply applied math and science.  This means 
-that an engineering proof needs to convince people by exposing a 
-thought process which establishes the believed truth of some 
-statement.  Generally, you cannot do a proof by computer because 
-the computer does not expose the thought processes, it only gets 
-"the right answer."  The "right answer" alone is not convincing.  
+that an engineering proof needs to convince people by establishing 
+the authority by which a thoerem is deemed true and reliable.  
+Generally, you cannot do a proof by computer because the computer 
+does not expose the underlying authorities by which it computes.  
+It only gets "the right answer."  The "right answer" alone is usually 
+not convincing, no matter how true and right the answer is.  This 
+is especially true if there is any doubt or controversy, which is 
+preciesly when a proof is most needed.   
 </P><P>                                
 
 <B>Use of Calculators and Computers</B><a name="Calculators"></a><BR>
@@ -288,7 +297,7 @@ is required.</P><P>
 Avoiding plagiarism is one aspect of working with
 academic integrity, which is more generally discussed in the
 Student Handbook (<a href=
-"http://www.dordt.edu/campus_life/student_handbook/general_information.shtml#academic_integrity"
+"https://www.dordt.edu/student-life/student-handbook/general-information#Academic%20Integrity"
 >section on Academic Integrity</a>).</P><P>  
 
 Keep your papers and computer files private.  The 
@@ -331,7 +340,7 @@ Available."</P><P>
 Policing and prosecuting academic dishonesty is time consuming. 
 It is not the professor's responsibility to design an absolutely 
 cheat-proof course.  Thus, penalties for those who do get caught
-tend to be high in order to serve as a deterent to all.  Students
+tend to be high in order to serve as a deterrent to all.  Students
 should be responsible to each other to create an environment of 
 integrity in the course.  Professor C.S. Lewis was once asked by 
 another professor what he did about plagiarism.  Here is his 
@@ -367,8 +376,9 @@ the last sentence:
      students to think that "getting answers" (by any means) is 
      more important than deep understanding of the subject.<br><br>                                                       
                                                            
-  **By "transcription," Lewis means copying with non-substantive 
-    variations so that it looks like your own work.
+  **By "transcription," Lewis means copying in your own handwriting 
+    or with non-substantive variations so that it looks like 
+	your own work.
                                                           </small>
 </blockquote>
 
@@ -394,15 +404,6 @@ at Dordt University, and for some other courses too, so <a
 href="https://www.dordt.edu/academics/academic-enrichment-center/peer-tutoring">ASK</a>  
 for peer tutoring!  When tutorial help is offered for a class, any student in the 
 class may participate.  <br><br> 
-
-<!--  I think it works now via dcc  
-<small>** Link only works on-campus or via (put left angle here)!-- OLD PROXY 
-INSTRUCTIONS <a href=
-"https://denis.dordt.edu/offices/computer_services/help/network/student/denis/"
-> --(put right angle here) <a href=
-"https://dcc.dordt.edu/services/computer_services/get_help/help_guides/dordts-network/vpn-setup"
->VPN</a>*.</small> -->
-
 
 </td></tr>
 </table>
