--- a/Texts.htm
+++ b/Texts.htm
@@ -51,25 +51,32 @@
    to get back to this page from one of the requisition pages linked below.
    <br><br>
 
-   <br><u><b>Spring 2020 course</b></u>
+   <br><u><b>Fall 2020 courses</b></u>
    </td></tr></table>
    
    
    <table align="center" width="520" border="0" cellpadding="0">
  
- <!--EGR 304--> 
-   <tr><td colspan="2"><a href="S20/304/304S20_Textbook_Requisitions.png">
-       EGR 304, Embedded Microprocessor Systems (with lab)</a></td></tr>
-   <tr><td width="120">
-       <a href="S20/304/304S20_Textbook_Requisitions.png">
-       <img src="S20/304/WWW.JPG" style="border-style: none"/>
+ <!--EGR 322--> 
+   <tr><td colspan="2"><a href="F20/322/322F20_Textbook_Requisitions.png">
+       EGR 322, Electronics I (with lab)</a></td></tr>
+   <tr><td width="180">
+       <a href="F20/322/322F20_Textbook_Requisitions.png">
+       <img src="F20/322/Sedra_Smith_8th_Cover.png" style="border-style: none"/>
        <br><br></td>
        <td valign="top">
-	   Resources from the World Wide Web will be used.<br>
-	   Students will not need to purchase a textbook.<br>
-	   An <a href="https://ncees.org/exams/calculator/">NCEES-approved calculator</a> will be needed for tests.<br>
-       Official requisition <a href="S20/304/304S20_Textbook_Requisitions.png">here</a><br>
-	     
+	   &nbsp;
+   </td></tr>
+	
+ <!--EGR 363--> 
+   <tr><td colspan="2"><a href="F20/363/363F20_Textbook_Requisitions.png">
+       EGR 363, Introduction to Communication Systems</a></td></tr>
+   <tr><td width="120">
+       <a href="F20/363/363F20_Textbook_Requisitions.png">
+       <img src="F20/363/Proakis_Salehi_Cover_116x163_tumbnail.jpg" style="border-style: none"/>
+       <br><br></td>
+       <td valign="top">
+	   &nbsp;
    </td></tr>
 	
    <!--Horizontal Rule-->  
@@ -81,6 +88,10 @@
 </table>
 <table align="center" width="520" border=0 cellpadding=0><tr><td><small>
    <b>Past Courses Instructed by Professor De Boer</b><br><br>
+   
+   <br><u><b>Spring 2020 course</b></u><br>
+   <a href="S20/304/304S20_Textbook_Requisitions.png">
+      EGR 304, Embedded Microcontroller Systems (With lab)</a><br>
 
    <br><u><b>Fall 2019 courses</b></u><br>
    <a href="F19/204/204F19_Textbook_Requisitions.htm">
