screen-shot NYT Morning

--- a/F20/322F20.HTM
+++ b/F20/322F20.HTM
@@ -33,7 +33,7 @@ TABLE {
                                                  <A target="_top"
                         HREF="../redirect/Dordt_Engineering.htm">
 
-            Dordt College Engineering Department</A>         <BR>
+            Dordt University Engineering Department</A>         <BR>
                                                              <BR>
                       ELECTRONICS I, EGR 322                 <BR>
                           (Fall 2020)                    </B></P>
