Updated textbook infor for EGR 322 F20

--- a/F20/322/322F20PS.HTM
+++ b/F20/322/322F20PS.HTM
@@ -136,8 +136,8 @@ PS                                                           <BR>
         non-ideal operational amplifiers.              <br>&nbsp;
         Read Chapter 1                                 <BR>&nbsp;
                                                        <BR>&nbsp;
-        <DO>Do +1.25, +1.32, 1.33, 1.39, D*1.50, 1.65,     <BR>&nbsp;
-        1.67, 1.72.</DO>                                    <br>&nbsp;
+        <DO>Do 1.28, 1.36, 1.38, +1.45, D*1.55, 1.67,     <BR>&nbsp;
+        1.69, 1.74.</DO>                                    <br>&nbsp;
         Note clarification of problem <a href=
         "../../errata/Sedra_Smith/7th/S_S_7_ER.HTM#P48_A"
                               >+1.25</a>               <br>&nbsp;<small>
