--- a/Texts.htm
+++ b/Texts.htm
@@ -58,10 +58,10 @@
    <table align="center" width="520" border="0" cellpadding="0">
  
  <!--EGR 322--> 
-   <tr><td colspan="2"><a href="F20/322/322F20_Textbook_Requisitions.png">
+   <tr><td colspan="2"><a href="F20/322/322F20_Textbook_Requisitions.htm">
        EGR 322, Electronics I (with lab)</a></td></tr>
    <tr><td width="180">
-       <a href="F20/322/322F20_Textbook_Requisitions.png">
+       <a href="F20/322/322F20_Textbook_Requisitions.htm">
        <img src="F20/322/Sedra_Smith_8th_Cover.png" style="border-style: none"/>
        <br><br></td>
        <td valign="top">
